# hebrew-numbers

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  fib.py  justfile  mkdocs.yml  pyproject.toml  run.py
.github/workflows/: build-and-publish.yml  ci.yml  pre-commit.yml
docs/: index.md
hebrew_numbers/: __init__.py  hebrew_numbers.py
scripts/: create_csv.py  fib.py  tables.py
src/hebrew_numbers/: __init__.py  hebrew_numbers.py  jinja.py
tests/: test_.py  test_hebrew_filters.py  test_jinja.py  test_numbers.py
tests/test_numbers/: test_cardinal_number_ConstructState_ABSOLUTE_f_.yml  test_cardinal_number_ConstructState_ABSOLUTE_m_.yml  test_cardinal_number_ConstructState_CONSTRUCT_f_.yml  test_cardinal_number_ConstructState_CONSTRUCT_m_.yml  test_cardinal_number_False_absolute_f_.yml  test_cardinal_number_False_absolute_m_.yml  test_cardinal_number_False_construct_f_.yml  test_cardinal_number_False_construct_m_.yml  test_cardinal_number_True_construct_f_.yml  test_cardinal_number_True_construct_m_.yml  test_cardinal_number_absolute_f_.yml  test_cardinal_number_absolute_m_.yml  test_cardinal_number_construct_f_.yml  test_cardinal_number_construct_m_.yml  test_count_noun_False_False_f_.yml  test_count_noun_False_False_m_.yml  test_count_noun_False_True_f_.yml  test_count_noun_False_True_m_.yml  test_count_noun_False_f_.yml  test_count_noun_False_m_.yml  test_count_noun_True_False_f_.yml  test_count_noun_True_False_m_.yml  test_count_noun_True_True_f_.yml  test_count_noun_True_f_.yml  test_count_noun_True_m_.yml  test_count_prefix_False_False_f_.yml  test_count_prefix_False_False_m_.yml  test_count_prefix_False_True_m_.yml  test_count_prefix_False_f_.yml  test_count_prefix_False_m_.yml  test_count_prefix_True_False_f_.yml  test_count_prefix_True_False_m_.yml  test_count_prefix_True_True_m_.yml  test_count_prefix_True_f_.yml  test_count_prefix_True_m_.yml  test_indefinite_number.yml  test_indefinite_number_False_.yml  test_ordinal_number_False_f_.yml  test_ordinal_number_False_m_.yml  test_ordinal_number_True_f_.yml  (+3 more)
